Firefox bug for back dashboard, tabs background color changed on explore page, jumpto bootstrap-select fixed

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -364,7 +364,7 @@ div.message {
           display:inline-block;
           background:transparent url(/assets/svg/back.svg) no-repeat center/7px 11px;
           width:7px;
-          height:30px;
+          height:11px;
           margin:0px 11px 0px 10px;
         }
       }
