--- a/app/assets/stylesheets/explore.css.less
+++ b/app/assets/stylesheets/explore.css.less
@@ -184,16 +184,18 @@
       position: relative;
       padding-top: 10px;
 //      overflow-y: auto;
-      h3{
+      label{
         font:14px 'sourcesans_pro', 'sans-serif';
         color: #62CBF2;
         margin:0px 0px 5px;
+        text-transform:normal !important;
       }
-      h4{
+      label.h4{
         font:14px 'sourcesans_pro', 'sans-serif';
         color: @3c4352;
         display: none;
         margin:0px 0px 5px;
+        text-transform:normal !important;
         span{
           color: @00adee;
         }
